tests/src/frontend/syntax/invalid/lvalue_tuple.sk
fun main(): String {
  (x, a + b) = 42;
  "Fail"
}
